test/files/neg/t0899.check
t0899.scala:9: error: super may not be used on value o; super can only be used to select a member that is a method or type
  override val o = "Ha! " + super.o
                                  ^
t0899.scala:11: error: super may not be used on variable v; super can only be used to select a member that is a method or type
  super.v = "aa"
        ^
t0899.scala:12: error: super may not be used on variable v; super can only be used to select a member that is a method or type
  println(super.v)
                ^
3 errors
